--- a/SMPosts-iOS-Demo/Root/Settings.bundle/Root.plist
+++ b/SMPosts-iOS-Demo/Root/Settings.bundle/Root.plist
@@ -22,6 +22,26 @@
 			<key>DefaultValue</key>
 			<false/>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSMultiValueSpecifier</string>
+			<key>Title</key>
+			<string>App Environment</string>
+			<key>Key</key>
+			<string>app_environment_key</string>
+			<key>DefaultValue</key>
+			<string>app_environment_real</string>
+			<key>Titles</key>
+			<array>
+				<string>Mock</string>
+				<string>Real</string>
+			</array>
+			<key>Values</key>
+			<array>
+				<string>app_environment_mock</string>
+				<string>app_environment_real</string>
+			</array>
+		</dict>
 	</array>
 </dict>
 </plist>
